--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "projeto-numeros-romanos",
+  "name": "test-numerals",
   "version": "1.0.0",
   "description": "",
-  "main": "app/index",
+  "main": "index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
