--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "name": "test-numerals",
   "version": "1.0.0",
   "description": "",
-  "main": "index",
+  "main": "src/index.ts",
+  "dependencies": {
+    "@types/node": "^13.11.1",
+    "babel": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "readline": "^1.3.0",
+    "tslint": "^6.1.1",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/moniadamz/test-numerals.git"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@types/node": "^13.11.1",
-    "babel": "^6.23.0"
+  "bugs": {
+    "url": "https://github.com/moniadamz/test-numerals/issues"
   },
-  "devDependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0"
-  }
+  "homepage": "https://github.com/moniadamz/test-numerals#readme"
 }
