--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "src/index.ts",
   "dependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
     "babel": "^6.23.0",
+    "babel-jest": "^25.3.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "jest": "^25.3.0",
     "readline": "^1.3.0",
     "tslint": "^6.1.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
