--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "babel-register": "^6.26.0",
     "jest": "^25.3.0",
     "readline": "^1.3.0",
-    "tslint": "^6.1.1",
+    "tslint": "^6.1.1"
+  },
+  "devDependencies": {
     "typescript": "^3.8.3"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "jest"
   },
